crate article component.change sidebar menu for responsive UI on smaller screens.fix issues for better UX

--- a/admin-panel/src/App.css
+++ b/admin-panel/src/App.css
@@ -9,3 +9,43 @@
 /* .side-bar-list li:not(:last-child) {
   border-bottom: 1px solid black;
 } */
+
+td {
+  font-size: small;
+}
+.animated-btn-container {
+  cursor: pointer;
+  width: fit-content;
+  height: fit-content;
+  margin-right: 12px;
+}
+.line1,
+.line2,
+.line3 {
+  width: 35px;
+  height: 5px;
+  border-radius: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+  pointer-events: none;
+}
+
+.change .line1 {
+  transform: scale(0.6, 1) translate(0, 5.5px) rotate(20deg);
+}
+
+/* Fade out the second bar */
+.change .line2 {
+  /* opacity: 0; */
+  transform: scale(0.9, 1) translate(-9px, 0);
+}
+
+/* Rotate last bar */
+.change .line3 {
+  transform: scale(0.6, 1) translate(0, -5.5px) rotate(-20deg);
+}
+
+.open {
+  transform: translate(-266px, 0);
+}
